@@ -51,6 +51,15 @@ has 'controller_callback_wumpusrover' => (
     is  => 'ro',
     isa => 'CodeRef',
 );
+has 'quit_subs' => (
+    traits  => ['Array'],
+    is      => 'ro',
+    isa     => 'ArrayRef[CodeRef]',
+    default => sub {[]},
+    handles => {
+        '_push_quit_sub' => 'push',
+    },
+);
 
 our $s;
 
@@ -78,6 +87,13 @@ sub run_cmd
     eval $cmd;
     die $@ if $@;
 
+    return 1;
+}
+
+sub quit
+{
+    my ($self) = @_;
+    $_->() for @{ $self->{quit_subs} };
     return 1;
 }
 
@@ -132,6 +148,10 @@ sub _compile_mod
         # though a symbol table manipulation method may be considered just as evil.
         my $del_str = 'delete $' . $pack . '::{uav_module_init}';
         eval $del_str;
+    }
+
+    if( my $quit_call = $pack->can( 'uav_module_quit' ) ) {
+        $self->_push_quit_sub( $quit_call );
     }
 
     return 1;
@@ -261,3 +281,5 @@ parens.
 The method C<uav_module_init()> is called with the package name as the first argument.  
 Subsquent arguments will be the hashref passed to C<load()/load_lib()>.  After being called,
 this sub will be deleted from the package.
+
+The method C<uav_module_quit()> is called when the REPL is closing.
