@@ -9,7 +9,7 @@
  * NODE_PATH=/path/to/nodecopter/lib/navdata node nav_data_dump.js
  *
  */
-var packet = "88776655d004804fc00300000000000000009400000002006400000000d8bb450028a9c50000c8c1000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000030000009b977e3f5cc31abc339cd53da09be3b9f5db7e3f3c20c13d877bd6bd1828c0bde6747d3f00000000000000000000000010004801000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000ffff0800581d0000";
+var packet = "88776655f504800fb51700000100000000009400000003004c0000000000b8c20000dcc30030654616020000c73d86431d4143c300000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000003000000e53b7d3fd51816befe0733bb271d163e2f3a7d3fa356f13b01afd43a79dafbbbfafd7f3f65903544a9c4fec200808bc410004801000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000ffff0800e3230000";
 var packet_buf = new Buffer( packet, "hex" );
 
 var parseNavData = require( "parseNavdata" );
