@@ -3,4 +3,9 @@ sub mock ()
     return 1;
 }
 
+sub uav_module_quit ()
+{
+    $main::DID_QUIT = 1;
+}
+
 1;
